{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "PlayerKeyboard",
            "id": "00b5fead-8259-4acb-984a-536e6b583467",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "c3411ab1-5246-4dc1-8039-3826e6445fc6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RunMode",
                    "type": "Button",
                    "id": "e979434c-7330-4131-996d-bc14ee9f69fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WalkMode",
                    "type": "Button",
                    "id": "8555bed1-fe10-404f-bd8d-05d924141775",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c1ceffcc-b448-460f-89c9-66d4ff0abc4f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseDelta",
                    "type": "PassThrough",
                    "id": "84226c60-17a7-4523-878a-b2c05081f385",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "5ba347be-2ab1-4111-af5e-40d2450f69bd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BuildMenu",
                    "type": "Button",
                    "id": "8258cfcc-6b83-4397-b8e7-52eed828efed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EquipmentMenu",
                    "type": "Button",
                    "id": "33708342-dbad-4166-8019-d3aa6a158fc4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BuildingPlacement",
                    "type": "Button",
                    "id": "8a8b0ab8-7941-4040-9a8d-5e15ce82d456",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "2c24f6fd-7f83-4b79-985d-037ac8d092eb",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "03bee663-d17b-46c3-97fc-61e0122d82e2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7392d9b6-0e2b-4682-bbe1-cde4571aae7f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6008ce20-aea7-47ee-ad65-8c764c1b5e6c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "744c9f4e-a24e-4af1-b985-70381b16c357",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c78192ea-e5b4-47c2-aba3-349f08b5e6e3",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0eaeb3f7-d83a-4cb4-8ef9-39799e67bb09",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92e8cbdf-ba77-40f5-b602-fdb1ecc4d85c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "794c6031-d0e7-473f-bdbb-1bd2f499fb89",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4db3c2d-4e06-4fe8-9df5-7602ce57234f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bdd7d1a-a0ee-414b-bcf3-11c67a312104",
                    "path": "<Keyboard>/b",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "BuildMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6d9fa90-2013-4675-821e-3a8e99ace72a",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EquipmentMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "865ae6c6-d9f4-4a02-9407-35b5d5c16b28",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildingPlacement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5386bbe-b93d-4ca2-8a0f-d1e2e02795e3",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildingPlacement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99d60496-1513-464c-891f-799ddc1692a5",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildingPlacement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}